fix design text-align

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -16,7 +16,7 @@
 }
 @media(min-width:750px){
     .navbar-container{
-        padding: 2rem 5rem;
+        padding: 2rem 0.5rem;
     }
     .navbar{
         margin: inherit;
